Thu Feb 19 18:55:13 2004  Yamuna Krishnamurthy  <yamuna@oomworks.com>

	* orbsvcs/orbsvcs/AV/AVStreams_i.h: 	
	* orbsvcs/orbsvcs/AV/AVStreams_i.cpp (protocol_object_set): 
	* orbsvcs/orbsvcs/AV/AVStreams_i.cpp (is_protocol_object_set): 

	  Added the above methods in order to set/get a flag that shows if
	  the protocol_object is set and hence if the mmdevices are bound
	  successfully.
	  
	  The problem of the ACE_Acceptor::handle_input () not being
	  called manifested when running the AVStreams tests on a single
	  host (for eg. daily builds). The problem on a single host (and
	  which could manifest itself sometimes in a multiple host
	  scenario too) was due to the sequence in which the various
	  requests to the sender arrived and were processed. There are two
	  kinds of send and receive that go on. One is the GIOP requests
	  and the other the out of band AVStreams connection setup
	  requests. When a two-way bind_devs call is made by the sender
	  the AVStreams initiates the setup of the out-of-band data path
	  by creating an acceptor and listening for a connect request on
	  the sender. It also initiates a connect on the receiver. When
	  the connect call is made by the receiver the sender OS accepts
	  the connection though it does not process the accept at the
	  application level. Before it can process the connect request it
	  receives a reply to the bind_devs as the receiver assumes it is
	  connected to the sender. The bind_devs reply is processed before
	  the connect request is processed at the application
	  level. Hence, the application continues to execute and there is
	  no thread to accept the connect request. So the
	  ACE_Acceptor::handle_input does not get called and subsequently
	  the protocol_object on which data is sent is also not
	  created. Immediately after the bind_devs the sender::pace_data
	  is called which tries to send the frames on a null
	  protocol_object and results in a seg fault. This was fixed by