@@ -1834,6 +1834,8 @@ Norm Whitehead <Norm_Whitehead@raytheon.com>
 Jiang Wei <sdjiangwei@sina.com>
 Kevin Bryan <bryank@cs.uri.edu>
 Zvika Ashani <zvika@aspectusvi.com>
+Dom Monteiro <d.monteiro@netia.net>
+Jean-Marc Prud'homme <JPrudhomme@interstarinc.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
